--- a/ExercicesJS/GarderieAnimaux/CSS/monstyle.css
+++ b/ExercicesJS/GarderieAnimaux/CSS/monstyle.css
@@ -1,7 +1,7 @@
 ﻿body
 { background-repeat:no-repeat;
   background-color:#ffcc66;
-  font-family = "Arial", "Helvetica", sans-serif;
+  font-family : "Arial", "Helvetica", sans-serif;
   background-repeat: no-repeat;
   background-image:url(../img/Animal.jpg);
 }
